Add JUnit report step in Jenkinsfile
Add JUnit report publishing to Jenkins pipeline.

--- a/sample-app/Jenkinsfile
+++ b/sample-app/Jenkinsfile
@@ -24,6 +24,12 @@ pipeline {
                     sh 'mvn test'
                 }
             }
+
+            post {
+                always {
+                    junit 'sample-app/target/surefire-reports/*.xml'
+                }
+            }
         }
     }
 
